Target C++20 per learncpp.com lesson 0.12

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.insertFinalNewline": true,
     "files.exclude": {
         "**/.git": false,
-    }
+    },
+    "C_Cpp.default.cppStandard": "c++20"
 }
