--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,7 @@
                 "-Wconversion",
                 "-Wsign-conversion",
                 "-Werror",
+                "-std=c++20",
                 "${file}",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
