--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+    "editor.rulers": [
+        80,
+        120
+    ],
     "files.insertFinalNewline": true,
     "files.exclude": {
         "**/.git": false,
