--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,7 +18,7 @@
                 "-std=c++20",
                 "${file}",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}"
+                "${fileDirname}/buildArtifacts/${fileBasenameNoExtension}"
             ],
             "options": {
                 "cwd": "${fileDirname}"
